--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.7",
+    "react-styled-flexboxgrid": "^2.2.0",
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
+    "styled-components": "^3.2.3",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   },
